[metadata]
name = retrograde
version = 0.10.0
author = Rasmus Bondesson
author_email = raek@raek.se
url = https://github.com/raek/retrograde
description = Software to serve a gemini orbit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Internet
    Topic :: Utilities

[options]
packages = retrograde
python_requires = >=3.6
install_requires =
    fasteners >=0.17
    gemurl >=1.1.0
    gemcall @git+https://notabug.org/tinyrabbit/gemcall.git#egg=gemcall

[options.extras_require]
test =
    flake8

[options.entry_points]
console_scripts =
    retrograde-admin = retrograde.admin:main

[flake8]
max_line_length = 120
